css/header.css
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
body {
    font-family: 'Oswald', sans-serif;
    color: #1D1D1D;
    box-sizing: border-box;
}

body, html {
    min-height: 100vh;
    position: relative;
}

header {
    background-color: #37C8EC;
    height: 100px;
    /* border-bottom: solid #2267A5 10px; */
    position: sticky;
    top: 0;
    width: 100%;
    box-shadow: -6px -21px 67px;
    z-index: 2;
}

nav ul li {
    display: inline-block;
    margin-left: 36px;
    font-size: 21px;
}

header a {
    text-decoration: none;
    font-family: 'Oswald', sans-serif;
    color: #1D1D1D;
    font-size: 20px;
    font-weight: bolder;
    padding-bottom: 15px;
}

header a:hover {
    color: #2267A5;
    border-bottom: solid #f1f1f1 8px;
}

nav {
    width: 42%;
    position: absolute;
    right: 25px;
    top: 39px;
}

header #logo {
    position: relative;
    left: 142px;
    width: 94px;
    top: 3px;
}

header h1 {
    position: relative;
    left: 220px;
    bottom: 21px;
    font-weight: bold;
    font-size: 18px;
}

